# riotduck

./: .gitignore  README.md  pyproject.toml  specification.md
config/: default.yaml  fake_profile.yaml  ism_bands.yaml  library.example.yaml
docs/: CNAME  index.html  style.css
etc/udev/rules.d/: 99-riotduck.rules
src/riotduck/: __init__.py  __main__.py  baseline.py  bus.py  capture.py  cli.py  config.py  dedup.py  dsp.py  events.py  library.py  runner.py  scanner.py
src/riotduck/agents/: __init__.py  analysis_agent.py  base.py  fingerprint_agent.py  scanner_agent.py
src/riotduck/analysis/: __init__.py  classifier.py
src/riotduck/fingerprint/: __init__.py  rtl_433.py  urh.py
src/riotduck/notify/: __init__.py  base.py
src/riotduck/sdr/: __init__.py  base.py  fake.py  hackrf.py  manager.py  rtlsdr.py
src/riotduck/storage/: __init__.py  baselines.py  files.py
tests/: test_analysis.py  test_analysis_agent.py  test_analysis_agent_library.py  test_baseline.py  test_baseline_persistence.py  test_capture.py  test_capture_buffer.py  test_capture_meta.py  test_cli_analyze.py  test_cli_library.py  test_cluster_suppression.py  test_config.py  test_dedup.py  test_dsp.py  test_fake_sdr.py  test_fingerprint_agent.py  test_library.py  test_notify.py  test_rtl_433.py  test_rtl_433_version.py
